--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <div class="container">
         <div class="wrapper">
-            <h1 class="title h1">Угадайте животное&#128522;</h1>
+            <h1 class="title h1">Guess an Animal&#128522;</h1>
             <div class="imgs"></div>
         </div>
     </div>
